[gd_scene load_steps=10 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://Players.tscn" type="PackedScene" id=3]
[ext_resource path="res://CoinSpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameTimer.tscn" type="PackedScene" id=5]
[ext_resource path="res://MainMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://ControllerAssigner.tscn" type="PackedScene" id=7]
[ext_resource path="res://PlayerManager.gd" type="Script" id=8]
[ext_resource path="res://assets/OurMusicBox _CanCan.ogg" type="AudioStream" id=9]

[node name="Game" type="Node2D"]

script = ExtResource( 1 )

[node name="Map" parent="." instance=ExtResource( 2 )]

[node name="Objects" parent="." instance=ExtResource( 3 )]

_sections_unfolded = [ "Cell" ]

[node name="CoinSpawner" parent="." instance=ExtResource( 4 )]

editor/display_folded = true
position = Vector2( 480, 300 )
scale = Vector2( 2, 2 )
_sections_unfolded = [ "Transform" ]
container_path = NodePath("../Objects")
spawn_interval = 5.0

[node name="CoinSpawner2" parent="." instance=ExtResource( 4 )]

editor/display_folded = true
position = Vector2( 240, 300 )
scale = Vector2( 1, 5 )
_sections_unfolded = [ "Transform" ]
container_path = NodePath("../Objects")
spawn_interval = 5.0

[node name="CoinSpawner3" parent="." instance=ExtResource( 4 )]

editor/display_folded = true
position = Vector2( 740, 280 )
scale = Vector2( 1, 5 )
_sections_unfolded = [ "Transform" ]
container_path = NodePath("../Objects")
spawn_interval = 5.0

[node name="GameTimer" parent="." instance=ExtResource( 5 )]

round_duration = 180

[node name="MainMenu" parent="." instance=ExtResource( 6 )]

editor/display_folded = true
visible = false

[node name="ControllerAssigner" parent="." instance=ExtResource( 7 )]

[node name="PlayerManager" type="Node2D" parent="."]

visible = false
script = ExtResource( 8 )

[node name="MusicBox" type="AudioStreamPlayer2D" parent="."]

visible = false
position = Vector2( 480, 270 )
stream = ExtResource( 9 )
volume_db = -10.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Transform" ]

[connection signal="countdown_started" from="." to="CoinSpawner" method="clear_coins"]

[connection signal="countdown_started" from="." to="ControllerAssigner" method="reset"]

[connection signal="countdown_started" from="." to="PlayerManager" method="_choose_random_crocodile"]

[connection signal="countdown_started" from="." to="PlayerManager" method="_reset_positions"]

[connection signal="countdown_started" from="." to="GameTimer" method="start_playing"]

[connection signal="game_loaded" from="." to="PlayerManager" method="_choose_random_crocodile"]

[connection signal="game_over" from="." to="MainMenu" method="show"]

[connection signal="game_over" from="." to="PlayerManager" method="_reset_controllers"]

[connection signal="game_started" from="." to="PlayerManager" method="_unfreeze_players"]

[connection signal="pressed" from="MainMenu/PlayButton" to="." method="start_counting_down"]


[editable path="CoinSpawner"]
[editable path="MainMenu"]
